Xml design edit

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_width="178dp"
         android:layout_height="166dp"
         android:scaleType="fitXY"
-        android:src="@drawable/logo_softwarica" />
+        android:src="@drawable/img" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
