--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
     tools:context=".activity.SplashActivity">
 
     <ImageView
-        android:src="@drawable/taskmanager"
+        android:src="@drawable/events"
         android:layout_width="300dp"
         android:layout_height="300dp"/>
 
