--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.DashboardActivity">
+    tools:context=".activity.DashboardActivity"
+    android:id="@+id/drawyerlayout">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+<!--        <include-->
+<!--            layout="@layout/app_bar"-->
+<!--            android:id="@+id/app_bar"/>-->
+
+        <FrameLayout
+            android:id="@+id/framelayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </LinearLayout>
 
 <!--    <ImageView-->
 <!--        android:layout_gravity="center"-->
@@ -23,20 +41,22 @@
             android:id="@+id/btnAdd"
             android:layout_width="wrap_content"
             android:layout_weight="1"
-            android:text="ADD Notes"
+            android:text="ADD Events"
+            android:layout_marginTop="50dp"
             android:layout_height="wrap_content"/>
         <Button
             android:id="@+id/btnView"
             android:layout_width="wrap_content"
-            android:text="View Notes"
+            android:text="View Events"
             android:layout_weight="1"
+            android:layout_marginTop="50dp"
             android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/btnLogout"
             android:layout_width="wrap_content"
             android:text="Logout"
-
+            android:layout_marginTop="50dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"/>
 
@@ -44,11 +64,22 @@
             android:id="@+id/btnUserprofile"
             android:layout_width="wrap_content"
             android:text="Profile"
-
+            android:layout_marginTop="50dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"/>
 
 
     </LinearLayout>
 
-</LinearLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        app:headerLayout="@layout/header"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="#ffff"
+        app:menu="@menu/sidebar"
+        android:layout_gravity="start"
+        />
+
+</androidx.drawerlayout.widget.DrawerLayout>
