--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -15,7 +15,7 @@
         tools:context=".activity.SignupActivity">
 
 
-        msung<de.hdodenhof.circleimageview.CircleImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgProfile"
             android:layout_width="150dp"
             android:layout_height="150dp"
