--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -7,12 +7,41 @@
     android:orientation="vertical"
     tools:context=".activity.AddEventActivity">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgEvent"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/noimage" />
 
     <EditText
         android:id="@+id/etNote"
         android:layout_margin="20dp"
         android:textSize="20sp"
-        android:hint="write a note.."
+        android:hint="Event Name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <EditText
+        android:id="@+id/etDesc"
+        android:inputType="textMultiLine"
+        android:layout_margin="20dp"
+        android:textSize="20sp"
+        android:hint="Description"
+        android:lines="8"
+        android:minLines="6"
+        android:gravity="top|left"
+        android:maxLines="10"
+
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <EditText
+        android:id="@+id/etLoc"
+        android:layout_margin="20dp"
+        android:textSize="20sp"
+        android:hint="Location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
