--- a/app/src/main/res/layout/contactview.xml
+++ b/app/src/main/res/layout/contactview.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imgProfile"
+        android:id="@+id/contactview_imgProfile"
         android:layout_width="110dp"
         android:layout_height="114dp"
         android:layout_marginStart="16dp"
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvName"
+        android:id="@+id/contactview_tvName"
         android:layout_width="232dp"
         android:layout_height="42dp"
         android:layout_marginStart="36dp"
@@ -25,11 +25,11 @@
         android:textStyle="bold"
         android:text="Contact Name"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/imgProfile"
+        app:layout_constraintStart_toEndOf="@+id/contactview_imgProfile"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvPhoneNo"
+        android:id="@+id/contactview_tvPhoneNo"
         android:layout_width="232dp"
         android:layout_height="42dp"
         android:layout_marginStart="36dp"
@@ -37,7 +37,7 @@
         android:layout_marginTop="12dp"
         android:text="Contact Phone"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/imgProfile"
-        app:layout_constraintTop_toBottomOf="@+id/tvName" />
+        app:layout_constraintStart_toEndOf="@+id/contactview_imgProfile"
+        app:layout_constraintTop_toBottomOf="@+id/contactview_tvName" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
