--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
+    android:layout_height="180dp"
    >
+    <de.hdodenhof.circleimageview.CircleImageView
 
-<ImageView
     android:layout_width="wrap_content"
-    android:layout_height="50dp"
+    android:layout_height="120dp"
     android:src="@mipmap/ic_launcher_round"
     android:id="@+id/Img"
     />
@@ -15,13 +15,12 @@
     <TextView
         android:id="@+id/Name"
         android:layout_width="wrap_content"
-        android:text="name"
+        android:layout_height="10dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"/>
+        android:text="name" />
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="8dp"
     android:text="Email"
     android:id="@+id/lName"/>
 
