--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,12 +3,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="180dp"
+
    >
     <de.hdodenhof.circleimageview.CircleImageView
 
     android:layout_width="wrap_content"
     android:layout_height="120dp"
     android:src="@mipmap/ic_launcher_round"
+        android:background="#008577"
     android:id="@+id/Img"
     />
 
@@ -17,11 +19,13 @@
         android:layout_width="wrap_content"
         android:layout_height="10dp"
         android:layout_weight="1"
+        android:layout_gravity="center"
         android:text="name" />
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Email"
+    android:layout_gravity="center"
     android:id="@+id/lName"/>
 
 
